--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,54 @@ body {
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   justify-content: center; }
 
+.heading {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400; }
+  .heading-2 {
+    font-size: 4rem;
+    font-style: italic;
+    line-height: 1.2; }
+    .heading-2--light {
+      color: #f9f7f6; }
+    .heading-2--dark {
+      color: #54483A; }
+  .heading-3 {
+    font-size: 1.6rem;
+    color: #c69963;
+    text-transform: uppercase; }
+  .heading-4 {
+    font-size: 1.9rem; }
+    .heading-4--light {
+      color: #f9f7f6; }
+    .heading-4--dark {
+      color: #54483A; }
+
+.btn {
+  background-color: #c69963;
+  color: white;
+  border: none;
+  border-radius: 0;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding: 1.8rem 3rem;
+  cursor: pointer;
+  transition: all .2s; }
+  .btn:hover {
+    background-color: #B28451; }
+
+.mb-2 {
+  margin-bottom: 2rem; }
+
+.mb-3 {
+  margin-bottom: 3rem; }
+
+.mb-4 {
+  margin-bottom: 4rem; }
+
+.mb-8 {
+  margin-bottom: 8rem; }
+
 .sidebar {
   background-color: #c69963;
   grid-row: 1 / -1;
@@ -29,20 +77,48 @@ body {
   grid-column: full-start / col-end 6; }
 
 .realtors {
-  background-color: grey;
+  background-color: #101d2c;
   grid-column: col-start 7 / full-end; }
 
 .features {
-  background-color: purple;
-  grid-column: center-start / center-end; }
+  margin: 15rem 0;
+  grid-column: center-start / center-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 6rem;
+  align-items: start; }
+
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-column-gap: 2.5rem;
+  grid-row-gap: 1.5rem; }
+  .feature__icon {
+    fill: #c69963;
+    width: 4.5rem;
+    height: 4.5rem;
+    grid-row: 1 / span 2;
+    transform: translateY(-1rem); }
+  .feature__text {
+    font-size: 1.7rem; }
 
 .story__pictures {
   background-color: orange;
   grid-column: full-start / col-end 4; }
 
 .story__content {
-  background-color: brown;
-  grid-column: col-start 5 / full-end; }
+  background-color: #f9f7f6;
+  grid-column: col-start 5 / full-end;
+  padding: 6rem 8vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start; }
+
+.story__text {
+  font-size: 1.5rem;
+  font-style: italic;
+  margin-bottom: 4rem; }
 
 .homes {
   background-color: yellow;
