--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -4,7 +4,18 @@
 		grid-column: full-start / col-end 4;
 	}	
 	&__content {
-		background-color: brown;
+		background-color: $color-grey-light-1;
 		grid-column: col-start 5 / full-end;
+		padding: 6rem 8vw;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-start;
+	}
+
+	&__text {
+		font-size: 1.5rem;
+		font-style: italic;
+		margin-bottom: 4rem;
 	}
 }
