--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,7 +2,26 @@
 	&__pictures {
 		background-color: orange;
 		grid-column: full-start / col-end 4;
-	}	
+		background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url('../img/back.jpg');
+		background-size: cover;
+		display: grid;
+		grid-template-columns: repeat(6, 1fr);
+		grid-template-rows: repeat(6, 1fr);
+		align-items: center;
+	}
+	&__image-1 {
+		width: 100%;
+		grid-column: 2 / 6;
+		grid-row: 2 / 6;
+		box-shadow: 0 2rem 5rem rgba(#000, .1);
+	}
+	&__image-2 {
+		width: 115%;
+		grid-column: 4 / -1;
+		grid-row: 4 / 6;
+		z-index: 10;
+		box-shadow: 0 2rem 5rem rgba(#000, .2);
+	}
 	&__content {
 		background-color: $color-grey-light-1;
 		grid-column: col-start 5 / full-end;
