--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -1,4 +1,69 @@
 .gallery {
-	background-color: green;
 	grid-column: full-start / full-end;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(7, 5vw);
+    grid-gap: 1.5rem;
+    padding: 1.5rem;
+
+    &__item {
+        &--1 {
+            grid-column: 1 / 3;
+            grid-row: 1 / 3;
+        }
+        &--2 {
+            grid-column: 3 / 6;
+            grid-row: 1 / 4;
+        }
+        &--3 {
+            grid-row: 1 / 3;
+        }
+        &--4 {
+            grid-row: 1 / 3;
+            grid-column: 7 / -1
+        }
+        &--5 {
+            grid-column: 1 / 3;
+            grid-row: 3 / 6;
+        }
+        &--6 {
+            grid-column: 3 / 5;
+            grid-row: 4 / 6;
+        }
+        &--7 {
+            
+        }
+        &--8 {
+            grid-column: 6 / 8;
+            grid-row: 3 / 5;
+        }
+        &--9 {
+            grid-column: 8 / -1;
+            grid-row: 3 / 6;
+        }
+        &--10 {
+            grid-row: 6 / -1;
+        }
+        &--11 {
+            grid-row: 6 / -1;
+            grid-column: 2 / 4;
+        }
+        &--12 {
+            grid-row: 6 / -1;
+        }
+        &--13 {
+            grid-row: 5 / -1;
+            grid-column: 5 / 8;
+        }
+        &--14 {
+            grid-row: 6 / -1;
+        }
+    }
+
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+    }
 }
