--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,41 @@
 .footer {
-	background-color: black;
+	background-color: $color-secondary;
 	grid-column: full-start / full-end;
+    padding: 8rem;
+}
+
+.nav {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem;
+    align-items: center;
+
+    &__link {
+        &:link, &:visited {
+            font-size: 1.4rem;
+            text-decoration: none;
+            color: white;
+            font-family: $font-display;
+            text-transform: uppercase;
+            text-align: center;
+            padding: 1.5rem;
+            display: block;
+            transition: all .2s;
+        }
+        &:hover, &:active {
+            background-color: rgba(white, .05);
+            transform: translateY(-3px);
+        }
+    }
+}
+
+.copyright {
+    font-size: 1.4rem;
+    color: $color-grey-light-2;
+    margin-top: 6rem;
+    text-align: center;
+    width: 70%;
+    margin-right: auto;
+    margin-left: auto;
 }
