--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,53 @@
 .header {
-	background-color: orangered;
 	grid-column: full-start / col-end 6;
+    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url('../img/hero.jpeg');
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    grid-template-rows: 1fr min-content 6rem 1fr;
+    grid-template-columns: max-content;
+    grid-row-gap: 1.5rem;
+    padding: 8rem;
+    padding-top: 4rem;
+    justify-content: center;
+
+    &__logo {
+        height: 3rem;
+        justify-self: center;
+    }
+
+    &__button {
+        justify-self: start;
+        align-self: start;
+    }
+
+    &__seenon-text{
+        display: grid;
+        grid-template-columns: 1fr max-content 1fr;
+        font-size: 1.6rem;
+        color: $color-grey-light-1;
+        grid-column-gap: 1.5rem;
+        align-items: center;
+        filter: brightness(70%);
+
+        &::before, &::after {
+            content: "";
+            display: block;
+            background-color: currentColor;
+            width: 100%;
+            height: 1px;
+        }
+    }
+
+    &__seenon-logos {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        grid-column-gap: 3rem;
+
+        img {
+            height: 2.5rem;
+            filter: brightness(70%);
+        }
+    }
 }
