--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -3,7 +3,9 @@
 	font-weight: 400;
 
 	&-1 {
-
+		font-size: 4.5rem;
+		color: $color-grey-light-1;
+		line-height: 1;
 	}
 	&-2 {
 		font-size: 4rem;
