--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,8 +4,8 @@
     background-size: cover;
     background-position: center;
     display: grid;
-    grid-template-rows: 1fr min-content 6rem 1fr;
-    grid-template-columns: max-content;
+    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+    grid-template-columns: minmax(min-content, max-content);
     grid-row-gap: 1.5rem;
     padding: 8rem;
     padding-top: 4rem;
@@ -43,10 +43,12 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         justify-items: center;
+        align-items: center;
         grid-column-gap: 3rem;
 
         img {
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%;
             filter: brightness(70%);
         }
     }
