--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -4,6 +4,13 @@
 	grid-column: sidebar-start / sidebar-end;
     display: flex;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-1000) {
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
 
 .nav-btn {
@@ -13,6 +20,14 @@
     height: 2px;
     width: 4.5rem;
     margin-top: 4rem;
+
+    @media only screen and (max-width: $bp-1000) {
+        margin-top: 0rem;
+        margin-right: 2rem;
+
+        &::before {transform: translateY(-1.2rem);}
+        &::after {transform: translateY(1.0rem);}
+    }
 
     &::before, &::after {
         background-color: white;
