--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,6 +17,8 @@ $font-display: 'Josefin Sans', sans-serif;
 // RESPONSIVE BREAKPOINT
 $bp-1200: 75em;
 $bp-1000: 62.5em;
+$bp-800: 50em;
+$bp-600: 37.5em;
 
 *, *::before, *::after {
 	margin: 0;
@@ -51,5 +53,9 @@ body {
 		grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
 		grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start]
 		repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+	}
+
+	@media only screen and (max-width: $bp-800) {
+		grid-template-rows: 6rem calc(100vh - 6rem);
 	}
 }
