--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,12 +4,20 @@
     background-size: cover;
     background-position: center;
     display: grid;
-    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+    grid-template-rows: 1fr min-content minmax(min-content, 6rem) 1fr;
     grid-template-columns: minmax(min-content, max-content);
     grid-row-gap: 1.5rem;
     padding: 8rem;
     padding-top: 4rem;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-800) {
+        grid-column: full-start / full-end;
+    }
+
+    @media only screen and (max-width: $bp-600) {
+        padding: 5rem;
+    }
 
     &__logo {
         height: 3rem;
