--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -8,12 +8,24 @@
     align-content: center;
     grid-row-gap: 2rem;
 
+    @media only screen and (max-width: $bp-800) {
+        grid-column: 1 / -1;
+    }
+
     &__list {
         display: grid;
         grid-template-columns: min-content max-content;
         align-items: center;
         grid-column-gap: 2rem;
         grid-row-gap: 5vh;
+
+        @media only screen and (max-width: $bp-800) {
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+
+        @media only screen and (max-width: $bp-600) {
+            grid-template-columns: min-content max-content;
+        }
     }
 
     &__img {
