--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,6 +1,5 @@
 .story {
 	&__pictures {
-		background-color: orange;
 		grid-column: full-start / col-end 4;
 		background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url('../img/back.jpg');
 		background-size: cover;
@@ -8,12 +7,22 @@
 		grid-template-columns: repeat(6, 1fr);
 		grid-template-rows: repeat(6, 1fr);
 		align-items: center;
+
+		@media only screen and (max-width: $bp-800) {
+			grid-column: full-start / full-end;
+			padding: 3rem;
+		}
 	}
 	&__image-1 {
 		width: 100%;
 		grid-column: 2 / 6;
 		grid-row: 2 / 6;
 		box-shadow: 0 2rem 5rem rgba(#000, .1);
+
+		@media only screen and (max-width: $bp-800) {
+			grid-column: 1 / 5;
+			grid-row: 1 / -1;
+		}
 	}
 	&__image-2 {
 		width: 115%;
@@ -21,6 +30,11 @@
 		grid-row: 4 / 6;
 		z-index: 10;
 		box-shadow: 0 2rem 5rem rgba(#000, .2);
+
+		@media only screen and (max-width: $bp-800) {
+			grid-row: 1 / -1;
+			width: 100%;
+		}
 	}
 	&__content {
 		background-color: $color-grey-light-1;
@@ -30,6 +44,11 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: flex-start;
+
+		@media only screen and (max-width: $bp-800) {
+			grid-column: full-start / full-end;
+			grid-row: 5 / 6;
+		}
 	}
 
 	&__text {
