--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(7, 5vw);
-    grid-gap: 1.5rem;
+    grid-gap: .1rem;
     padding: 1.5rem;
 
     &__item {
@@ -29,9 +29,6 @@
         &--6 {
             grid-column: 3 / 5;
             grid-row: 4 / 6;
-        }
-        &--7 {
-            
         }
         &--8 {
             grid-column: 6 / 8;
